<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ShoppingCartFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/shop_car_ll"
        android:background="@color/ShopCarBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40">
        <TextView
            android:layout_gravity="center_vertical"
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/ShopCar1"
             android:textSize="@dimen/x13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ShopCar2"
            android:textSize="@dimen/x13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ShopCar3"
            android:textSize="@dimen/x13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_above="@id/shop_car_ll2"
        android:layout_below="@id/shop_car_ll"
        android:id="@+id/shop_car_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/shop_car_ll2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35">

            <CheckBox
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:id="@+id/shop_car_rbAll"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/shop_car_quanxuan"
                android:layout_toRightOf="@id/shop_car_rbAll"
                android:gravity="center_vertical"
                android:text="@string/All"
                android:textSize="@dimen/x13"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <!--<TextView-->
                <!--android:layout_centerVertical="true"-->
                <!--android:id="@+id/shop_car_kuaihao"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/AllCount"-->
                <!--android:layout_toRightOf="@id/shop_car_quanxuan"-->
                <!--android:textSize="@dimen/x13"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

        <TextView
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/shop_car_quanxuan"
            android:layout_marginLeft="@dimen/x20"
            android:id="@+id/shop_car_price"
            android:text="@string/Allprice"
            android:visibility="gone"
            android:textSize="@dimen/x15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/x77"
            android:text="@string/edit"
            android:layout_toLeftOf="@id/shop_car_xiadan"
            android:id="@+id/shop_car_edit"
            android:layout_centerVertical="true"
            android:textSize="@dimen/x13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/shop_car_xiadan"
            android:layout_alignParentRight="true"
            android:text="@string/Xiadan"
            android:textSize="@dimen/x15"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/x2"
            android:background="@color/ShopXiadanBackground"
            android:layout_width="@dimen/x110"
            android:layout_height="match_parent" />




    </RelativeLayout>
</RelativeLayout>